--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
     <div class="container-fluid p-5">
         <div align="center" class="mb-5">
+            <h3>Enter Name</h3>
             <input type="text" name="" id="txtsms" class="form-control w-25" onkeyup="changetxt()">
         </div>
         <div class="container-fluid d-flex mt-2 justify-content-evenly">
