--- a/index.html
+++ b/index.html
@@ -23,17 +23,6 @@
         }
     </style>
     <script>
-        function changetxt(){
-           var show=document.getElementById('txtsms').value;
-            document.getElementById("result").innerHTML=show;
-        }
-        function rangechange(){
-            var range = document.getElementById('txtrange').value+"px";
-            result.style.fontSize=range;
-            document.getElementById("result").innerHTML=show;
-        }
-
-
         function center() {
             document.getElementById("result").style.textAlign='center';
 
@@ -51,6 +40,12 @@
         function colorchange(){
             document.getElementById("result").style.color=document.getElementById("txtcolor").value;
         }
+       function rangechange(){
+
+        var fontRange = document.getElementById("txtrange").value;    
+        var para = document.getElementById("result");
+        para.style.fontSize = fontRange + 'px';
+       }
 
     </script>
 </head>
@@ -59,10 +54,6 @@
 
 
     <div class="container-fluid p-5">
-        <div align="center" class="mb-5">
-            <h3>Enter Name</h3>
-            <input type="text" name="" id="txtsms" class="form-control w-25" onkeyup="changetxt()">
-        </div>
         <div class="container-fluid d-flex mt-2 justify-content-evenly">
             <div>
                 <h3>Font Size</h3>
@@ -88,7 +79,7 @@
         </div>
 
         <div class="mt-5">
-            <p id="result"></p>
+            <p id="result">Welcome To JavaScript</p>
         </div>
     </div>
 
