--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
             document.getElementById("result").style.color=document.getElementById("txtcolor").value;
         }
        function rangechange(){
-
         var fontRange = document.getElementById("txtrange").value;    
-        var para = document.getElementById("result");
-        para.style.fontSize = fontRange + 'px';
+        var sms = document.getElementById("result");
+        sms.style.fontSize = fontRange + 'px';
        }
 
     </script>
